# WordVault

./: .gitignore  DESIGN.md  New Features.txt  README.md  pyproject.toml
docs/: help.md
tests/: test_backup.py  test_diffs.py  test_document_menu.py  test_editor_smoke.py  test_encryption.py  test_ingest.py  test_markdown_editing.py  test_no_duplicate_methods.py  test_review.py  test_scripture.py  test_search.py  test_settings_help.py  test_similar.py  test_spelling.py  test_stage7_logic.py  test_store.py  test_walker.py
tools/: backup_library.py  build_dictionary_from_library.py  create_windows_shortcut.ps1  ingest_docx.py  reindex_library.py
wordvault/: __init__.py  __main__.py  models.py
wordvault/editor/: __init__.py  age_colors.py  editor_pane.py  find_bar.py  gather_dialog.py  help_dialog.py  info_panel.py  main_window.py  markdown_highlighter.py  outline.py  quick_open.py  review.py  search_dialog.py  settings_dialog.py  spelling.py  timeline.py
wordvault/ingest/: __init__.py  extract.py  pipeline.py  similar.py
wordvault/storage/: __init__.py  backup.py  crypto.py  diffs.py  encryption.py  schema.py  scripture.py  search.py  store.py  walker.py
